Fixed body height being too small

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,12 @@
 }
 
 
+#root{
+    background-color: white;
+    min-height: 100vh;
+}
+
+
 
 header{
     display: flex;
